[tool.poetry]
name = "learn-ml-eng"
version = "0.1.0"
description = "Machine Learning and Data Engineering playground"
authors = ["David Hinrichs <dvd.hnrchs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "learn_ml_eng"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.15.12"
ipython = "^8.8.0"
google = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
